--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <h2 id="song-title">Título de la Canción</h2>
                 <p id="song-author">Nombre del Autor</p>
                 <p id="song-description">Descripción de la canción...</p>
+                <div id="songNote"></div>
             </div>  
             <div class="controls-panel">
                 <div>
@@ -35,8 +36,9 @@
         </div>
     </div>
 
-
     <audio id="audio-player"></audio>
+    <script src="./src/js/snowfall.js"></script>
+
     <script src="./src/js/index.js"></script>
 </body>
 </html>
