--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fakito's Music (devBuild)</title>
+    <title>Fakito's Music</title>
     <link rel="stylesheet" href="./src/css/index.css"></link>
     <link rel="stylesheet" href="./src/css/responsive.css"></link>
 </head>
 <body>
+    <div class="panel-inicial">
+        <div>
+            <h1>Bienvenido!</h1>
+            <p>🎵 Aca subo un poco de la musica que me gusta hacer mis tiempos libres...</p>
+            <p>🎶 No sigo un estilo fijo, solo creo lo que me gusta...</p>
+            <p>🎼 Espero te guste alguna! 😃</p>
+        </div>
+        <button class="cerrar-panel-inicial">Escuchar</button>
+    </div>
+    
+
     <div class="background-panel"></div>
     <div class="back-img"></div>
 
