--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./src/css/responsive.css"></link>
 </head>
 <body>
+
+    <button class="button-panel-inicial">Lista de Tracks</button>
     <div class="panel-inicial">
         <div>
             <h1>Bienvenido!</h1>
@@ -16,8 +18,7 @@
             <p>🎼 Espero te guste alguna! 😃</p>
         </div>
         <button class="cerrar-panel-inicial">Escuchar</button>
-    </div>
-    
+    </div>    
 
     <div class="background-panel"></div>
     <div class="back-img"></div>
