--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="panel-inicial">
         <div>
             <h1>Bienvenido!</h1>
-            <p>🎵 Aca subo un poco de la musica que me gusta hacer mis tiempos libres...</p>
-            <p>🎶 No sigo un estilo fijo, solo creo lo que me gusta...</p>
-            <p>🎼 Espero te guste alguna! 😃</p>
+            <p>🎵 Aca subo un poco de la musica que me gusta hacer en mis tiempos libres...</p>
+            <p>🎶 No sigo un estilo ni genero fijo... solo creo lo que me gusta...</p>
+            <p>🎼 Espero que te guste alguna! 😃</p>
         </div>
         <button class="cerrar-panel-inicial">Escuchar</button>
     </div>    
