--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fakito's Music</title>
     <link rel="stylesheet" href="./src/css/index.css"></link>
     <link rel="stylesheet" href="./src/css/responsive.css"></link>
+    <script src="https://cdn.jsdelivr.net/npm/jsmediatags/dist/jsmediatags.min.js"></script>
 </head>
 <body>
 
@@ -47,6 +48,7 @@
             </div>         
         </div>
     </div>
+    
 
     <audio id="audio-player"></audio>
     <script src="./src/js/snowfall.js"></script>
