--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fakito's Music</title>
     <link rel="stylesheet" href="./src/css/index.css"></link>
-    <link rel="stylesheet" href="./src/css/responsive.css"></link>
+
     <script src="https://cdn.jsdelivr.net/npm/jsmediatags/dist/jsmediatags.min.js"></script>
 </head>
 <body>
@@ -17,8 +17,9 @@
             <p>🎵 Aca subo un poco de la musica que me gusta hacer en mis tiempos libres...</p>
             <p>🎶 No sigo un estilo ni genero fijo... solo creo lo que me gusta...</p>
             <p>🎼 Espero que te guste alguna! 😃</p>
+             <button class="cerrar-panel-inicial">Escuchar</button>
         </div>
-        <button class="cerrar-panel-inicial">Escuchar</button>
+     
     </div>    
 
     <div class="background-panel"></div>
@@ -48,7 +49,7 @@
             </div>         
         </div>
     </div>
-    
+    <div class="dynamic-background"></div>
 
     <audio id="audio-player"></audio>
     <script src="./src/js/snowfall.js"></script>
